style: move Profile back to right and ensure visibility

--- a/src/components/styles/About.css
+++ b/src/components/styles/About.css
@@ -48,15 +48,16 @@
 @media only screen and (min-width: 1025px) {
   .about-section {
     width: var(--cWidth);
-    justify-content: left;
+    justify-content: right;
     max-width: 1920px;
     height: var(--vh);
-    padding: 0px;
+    padding: 0px 5%;
     opacity: 1;
   }
   .about-me {
     padding: 0px;
-    width: 50%;
+    width: 45%;
+    z-index: 10;
   }
   .about-me p {
     font-size: 1.9vw;
